# tommma

./: .deploy.env.example  .gitignore  AGENTS.md  DICTATION_TZ.md  README.md  app.js  database.sql  deploy.sh  dictation_rules.json  index.html  package-lock.json  package.json  styles.css
.codex/environments/: environment-2.toml  environment.toml
.github/workflows/: ci.yml
api/: auth.php  config.php  db.php  state.php
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: audio.ts  plan-state.ts  server.ts  user-preferences.ts
backend/test/: audio-filename.test.ts  plan-state-schema.test.ts  user-preferences.test.ts
frontend/: .env.tauri  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/app/: AppRoot.css  AppRoot.ts  app-lifecycle.ts  app-root-providers.ts  auth-session.ts  calendar-board-context.ts  calendar-navigation-state.ts  (+18 more)
frontend/test/: plan-tree.test.ts  server-authoritative-sync.test.ts
scripts/: check-desktop-updater.mjs  check-desktop-updater.test.mjs  dev-port-guard.mjs  release-desktop.mjs  smoke-local.sh  smoke.mjs  sync-user-data-from-prod.sh  sync-user-data.sh  sync-version.mjs
workflow/: plan.md  release-checklist.md
workflow/sections/: section-1.1.md  section-1.2.1.md  section-1.2.2.md  section-1.2.3.md  section-1.2.md  section-1.3.md
worktree/: index.html
(+35 files in other folders)
